# pg_lupa

./: .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-checks.yml
pg_lupa/: __main__.py  lupa.py  test_lupa.py
pg_lupa/resources/: context.template.html  default-context.template.html  lupa.embed.css  lupa.embed.js  lupa.template.html
pglogviz/: __main__.py  pglogviz.py  test_pglogviz.py
