[tool.poetry]
name = "pglogviz"
version = "0.1.0"
description = ""
authors = ["Steinar V. Kaldager <steinar.kaldager@oda.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
