[tool.poetry]
name = "pg_lupa"
version = "0.1.0"
description = ""
authors = ["Steinar V. Kaldager <steinar.kaldager@oda.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
python-dateutil = "^2.8.2"
pytz = "^2022.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
types-python-dateutil = "^2.8.17"
types-pytz = "^2021.3.8"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
